<resources>
    <string name="app_name">TechTatva 16</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

    <string name="drawer_insta">InstaFeed</string>
    <string name="drawer_online">Online Events</string>
    <string name="drawer_results">Results</string>
    <string name="drawer_register">Register</string>
    <string name="drawer_favourites">Favourites</string>
    <string name="drawer_developers">Developers</string>
    <string name="drawer_about">About Us</string>

    <string name="event_01">AIB (Round 1)</string>
    <string name="event_02">ATR (Round 1)</string>
    <string name="event_03">Industrialize (Round 1)</string>
    <string name="event_04">Buzzinga (Round 1)</string>
    <string name="event_05">Conkreation (Round 1)</string>
    <string name="event_06">Decepticode (Round 1)</string>
    <string name="event_07">Mobivision (Round 1)</string>
    <string name="event_08">Corporate Rush (Round 1)</string>

    <string name="event_11">AIB (Round 2)</string>
    <string name="event_12">ATR (Round 2)</string>
    <string name="event_13">Industrialize (Round 2)</string>
    <string name="event_14">Buzzinga (Round 2)</string>
    <string name="event_15">Conkreation (Round 2)</string>
    <string name="event_16">Decepticode (Round 2)</string>
    <string name="event_17">Mobivision (Round 2)</string>
    <string name="event_18">Corporate Rush (Round 2)</string>

    <string name="category_01">Acumen</string>
    <string name="category_02">Airborne</string>
    <string name="category_03">Alacrity</string>
    <string name="category_04">Bizzmaestro</string>
    <string name="category_05">Cheminova</string>
    <string name="category_06">Constructure</string>
    <string name="category_07">Cryptoss</string>
    <string name="category_08">Electrific</string>
    <string name="category_09">Energia</string>
    <string name="category_10">Epsilon</string>
    <string name="category_11">Featured</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_insta_feed">InstaFeed</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_result">Results</string>
    <string name="qualified_teams">Qualified Teams</string>

    <string name="title_activity_category">Categories</string>
    <string name="error">An error occurred while connecting to the server.\nPlease check your connection or try again later.</string>
    <string name="oops">Oops!</string>
    <string name="swipe_reload">Swipe Down to Reload</string>
    <string name="fetching_data">Fetching Data...\nPlease Wait</string>
    <string name="category_tag">Category:</string>
    <string name="title_activity_about_us">About TechTatva</string>
    <string name="about_us">TechTatva is a national level technical fest in India organized by Manipal Institute of Technology students every year. With a plethora of events and workshops from all the spheres of Engineering organized by experts, TechTatva Fest witnesses mass participation from other colleges.\n\nCuriosity is the quality that forms the foundation of all the other milestones of innovation. The insatiable thirst for knowledge gives rise to a never ending chain of questions, which further lead to imagination, thinking, experimentation and implementation.\n\nThis year, we celebrate the spirit of being "Passionately Curious", something that lies at the heart of every innovation. Join us from 12th to 15th October to witness this spirit among the engineers of tomorrow.</string>
    <string name="title_activity_favourites">Favourites</string>
    <string name="no_favourites">No favourites found.</string>
    <string name="search">Search</string>
    <string name="trending">Trending</string>
    <string name="delete_all">Delete All</string>
    <string name="insta_tt16_hashtag">#techtatva16</string>
    <string name="title_activity_selected_category">SelectedCategoryActivity</string>
    <string name="day_1">Day 1</string>
    <string name="day_2">Day 2</string>
    <string name="day_3">Day 3</string>
    <string name="day_4">Day 4</string>
    <string name="category_info">Category Info</string>
    <string name="no_events">No Events.</string>
    <string name="category_view">Category View</string>
    <string name="day_view">Day View</string>
    <string name="title_activity_trending">Trending</string>
    <string name="notification_receiver">Boot Notification Receiver</string>
    <string name="boot_receiver">Boot Receiver</string>
    <string name="number_1">#1</string>
    <string name="number_2">#2</string>
    <string name="number_3">#3</string>
    <string name="refresh">Refresh</string>
    <string name="lugm">Linux Users\' Group\nManipal</string>
    <string name="github_lug">github.com/LUGM</string>
    <string name="fb_lug">fb.com/LUGManipal</string>
    <string name="swipe_down">Swipe Down to Return</string>
    <string name="to_return">To return</string>
    <string name="title_activity_easter_egg">Easter Egg</string>
    <string name="title_activity_developers">Developers</string>
    <string name="android">Android</string>
    <string name="anuraag_baishya">Anuraag Baishya</string>
    <string name="head">Head</string>
    <string name="anurag_choudhary">Anurag Choudhary</string>
    <string name="developer">Developer</string>
    <string name="naman_yadav">Naman Yadav</string>
    <string name="ayush_agrawal">Ayush Agrawal</string>
    <string name="ios">iOS</string>
    <string name="ykl">Yash Kumar Lal</string>
    <string name="abhishek_vora">Abhishek Vora</string>
    <string name="manas_dresswalla">Manas Dresswalla</string>
    <string name="windows">Windows</string>
    <string name="vinayak_agarwal">Vinayak Agarwal</string>
    <string name="gautham_vinod">Gautham Vinod</string>
    <string name="ui">UI</string>
    <string name="shubham_singhal">Shubham Singhal</string>
    <string name="ui_designer">UI Designer</string>
    <string name="no_results">No results available.</string>
    <string name="title_activity_online_events">Online Events</string>
    <string name="title_activity_register">Register</string>
    <string name="event_details">Event Details</string>
    <string name="info">Info</string>
    <string name="rate">Rate</string>
    <string name="cancel">Cancel</string>
    <string name="rate_event">Rate Event</string>
    <string name="acumen">Acumen</string>
    <string name="average_rating">Average Rating:</string>
    <string name="airborne">Airborne</string>
    <string name="na">NA</string>
    <string name="alacrity">Alacrity</string>
    <string name="acumen_desc">Challenging scientific and reasoning abilities, Acumen is a category that puts to test the innovation and presence of mind of the participants whilst bringing out their whimsical creative and inventive side through events like Tech Race.</string>
    <string name="airborne_desc">Airborne creates a platform to test your skills and knowledge in the field of Aerospace and Aeronautical Engineering through a series of competitions stretching from glider designing, incorporating new ideas to make rocket launcher, building flapping wing configuration aircrafts and many more astonishing stuff.</string>
    <string name="alacrity_text">Alacrity, primarily focuses in the field of Electronics and Communication. \r\nThe category comprises of events like a treasure hunt by making your own antenna, creating patterns using lasers, lens and mirrors, making metal detectors, using microcontrollers which encourages students to innovate. Finally, to battle your wits in the online technical event.\r\n</string>
</resources>
