<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/easter_egg_back"
    android:paddingTop="@dimen/activity_horizontal_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swipe_down"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:fontFamily="sans-serif-light"
            android:gravity="center_horizontal"/>

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/harambe"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_return"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:fontFamily="sans-serif-light"
            android:gravity="center_horizontal"/>


    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <LinearLayout
            android:id="@+id/lug_fb_layout"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">


            <ImageView
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:src="@drawable/ic_lug_fb"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fb_lug"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/white"/>

        </LinearLayout>

        <TextView
            android:id="@+id/lugm_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lugm"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-condensed"
            android:textSize="32sp"
            android:padding="@dimen/activity_horizontal_margin"
            android:gravity="center_horizontal"/>


            <LinearLayout
                android:id="@+id/lug_github_layout"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center">

                <ImageView
                    android:layout_width="52dp"
                    android:layout_height="52dp"
                    android:src="@drawable/ic_github"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/github_lug"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/white"/>

            </LinearLayout>

    </LinearLayout>


    <ImageView
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_linux"
        />


</RelativeLayout>