<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_primary">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:padding="@dimen/activity_vertical_margin">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/error"
        android:tint="@color/white"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/oops"
        android:textSize="45sp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-condensed"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/error"
        android:gravity="center_horizontal"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-condensed"
        android:textSize="20sp"/>

</LinearLayout>


   <LinearLayout
       android:id="@+id/no_connection_swipe_down"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_alignParentBottom="true"
       android:gravity="center_horizontal"
       android:orientation="vertical"
       android:background="@color/color_primary">

       <ImageView
           android:layout_width="20dp"
           android:layout_height="wrap_content"
           android:src="@drawable/swipe_down_icon"
           android:tint="@color/white"/>

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/swipe_reload"
           android:textSize="12sp"
           android:textColor="@color/white"
           android:fontFamily="sans-serif-condensed"
           android:layout_marginBottom="20dp"/>


   </LinearLayout>


</RelativeLayout>